# e-commerce

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/main/: admin.py  models.py  settings.py  urls.py  views.py
backend/main/management/commands/: make_actions.py  populate_db.py
backend/main/migrations/: 0001_initial.py  0002_action.py
backend/static/css/: base.css
backend/static/js/: theme.js
backend/templates/: action.html  base.html  index.html  product.html  product_list.html
backend/templates/elements/: card-list.html  card.html  carousel.html  footer.html  header.html
