[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Felix Fischer <payermann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg = "^3.1.19"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"