[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Felix Fischer <payermann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg2-binary = "^2.9.6"
Pillow = "^10.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"